# automaton

./: .gitignore  CMakeLists.txt  DFA.h  LambdaNFA.cpp  LambdaNFA.h  NFA.cpp  NFA.h  dfa_example.txt  lambda_nfa_example.txt  main.cpp
tema1/: DFA.cpp  LambdaNFA.cpp  LambdaNFA.h  NFA.cpp  main.cpp  nfa_example.txt
tema2/bonus/: input.txt  output.txt  solution.py
tema2/cerinta1/: input.txt  output.txt  solution.py
tema2/cerinta2/: input.txt  output.txt  solution.py
tema2/cerinta3/: input.txt  output.txt  solution.py
tema3/cerinta1/: input.txt  solution.py
tema3/cerinta2/: input.txt  output.txt  solution.py
tema3/cerinta3/: input.txt  output.txt  solution.py
